--- a/css/home.css
+++ b/css/home.css
@@ -32,62 +32,95 @@ a{
 
 .nav_bar{
     display: block;
-    height: 60px;
+    height: 50px;
     width: 100%;
     border-bottom: #ccc thin;
     border-width: 1px;
     box-shadow: 0 2px 1px #efefef;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .main_nav{
+    height: 100%;
     width: 80%;
     float: left;
 }
 
 
 .side_nav{
+    float: right;
     width: 20%;
-    text-align: end;
-    background-color: darkred;
-    z-index: 1;
+    height: 100%;    
 }
 
-.home_img{
-   height: 100%;
-    width: 10%;
+.main_nav .home_img{
+    height: 50px;
+    width: auto;
     float: left;
-    margin-top: 5px;
-    margin-right: 12px;
+    margin-right: 10px;
 }
 
 ul{
     list-style: none;  
 }
 
-.nav_btns{
+.main_nav .nav_btns{
+    position: relative;
+    height: 50px;
     float: left;
     display: inline-block;
     font-size: 75%;
     color: #000;
-    margin: 13px 5px;
     text-align: center;
-    padding: 5px 13px;
+    padding: 15px 15px;
     border-color: #f1f1f1;
-    border-style: solid;
+    border-style: hidden;
     border-width: 2px;
-    border-radius: 10px;
     box-shadow: 0 2px 1px #efefef;
 }
+
+.side_nav .side_btns{
+    position: relative; 
+    height: 50px;
+    float: right;
+    display: inline-block;
+    font-size: 75%;
+    color: #000;
+    text-align: center;
+    padding: 15px 15px;
+    background-color: #93d7c3;
+    border-color: #93d7c3;
+    border-style: hidden;
+    border-width: 2px;
+    box-shadow: 0 2px 1px #efefef;
+}
+
+/*.nav_btns .dropdown{
+    text-decoration: none;
+    display: none;
+    font-size: 70%;
+    position: absolute;background-color: #f9f9f9;
+    
+    box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.2);
+    padding: 3px 5px;
+}*/
 
 .dropdown{
     text-decoration: none;
     display: none;
     font-size: 70%;
     position: absolute;
-    background-color: #f9f9f9;
     box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.2);
     padding: 3px 5px;
+    z-index: 1;
+}
+
+.dropback2{
+    background-color: #93d7c3 
+}
+
+.dropback1{
+    background-color: #fff 
 }
 
 .dropdown a{
@@ -99,9 +132,14 @@ ul{
 .nav_btns:active,
 #submit:hover,
 #submit:active{
-    background-color: #ccc;
+    background-color: #dddddd;
 }
 
+
+.side_btns:hover,
+.side_btns:active{
+    background-color: #3ca385;
+}
 .hidbtn{
     display:none;
 }
@@ -116,7 +154,7 @@ ul{
 }
 
 .dropdown a:hover{
-    background-color: #ffcccc;
+    border-bottom: 1px solid #ccc;
 }
 
 .search_section{
