--- a/css/home.css
+++ b/css/home.css
@@ -60,6 +60,17 @@ a{
     margin-right: 10px;
 }
 
+.img_row{
+    height: 200px;
+    width: 200px;
+    margin: 0;
+    position: absolute;
+}
+
+.slid{
+    
+}
+
 ul{
     list-style: none;  
 }
@@ -185,3 +196,13 @@ ul{
     background-color: #fff;
     border-radius: 3px;
 }
+
+.slideloop {
+    position: relative;
+    width: 100%;
+    height: 220px;
+    display: inline-block;
+    overflow: hidden; 
+}
+
+
